--- a/views/index.tt
+++ b/views/index.tt
@@ -30,7 +30,7 @@
 	              </p>	
 				  
       <div id="gallery02" class="20191005_aargau2019">
-			<a href="/images/20191005_aargau2019/1.jpeg" data-lightbox="set02" data-title="Stilstudie v.l.n.r: cool, euphorisch, geknickt"><img width="150" class="gallery02" src="/images/20191005_aargau2019/1.jpeg" alt=""/></a>
+			<a href="/images/20191005_aargau2019/1.jpeg" data-lightbox="set02" data-title="Stilstudie v.l.n.r: cool, euphorisch, geknickt? ;-)"><img width="150" class="gallery02" src="/images/20191005_aargau2019/1.jpeg" alt=""/></a>
 			<a href="/images/20191005_aargau2019/3.jpeg" data-lightbox="set02" data-title="Rangliste Aargauer Meisterschaft 2019"><img width="150" class="gallery02" src="/images/20191005_aargau2019/3.jpeg" alt=""/></a>
 						
         </div>				  
