--- a/views/index.tt
+++ b/views/index.tt
@@ -23,6 +23,17 @@
 			  
 			  
 			  <!------------------------------------------------------------------------------------------------>
+              
+			  <hr class="pci">
+	          <h1><font size="2" color="#afafaf">02.05.2020</font><br>3. Innerschwyzer Meisterschaft ABGESAGT</h1>
+	              <p>
+					Schweren Herzens muss die diesjährige Innerschwyzer Meisterschaft vom 24. Mai 2020 im Selgis aufgrund der aktuellen Lage abgesagt werden.<br><br>
+Der Pfeifenclub Innerschwyz hofft auf ein baldiges Wiedersehen und wünscht allen bis dahin eine gute Zeit und viel Gesundheit.
+	              </p>	
+				  		  
+			  
+
+			  <!------------------------------------------------------------------------------------------------>                 
 			  <hr class="pci">
 	          <h1><font size="2" color="#afafaf">11.10.2019</font><br>2. Platz für den PCI an Aargauer Meisterschaft</h1>
 	              <p>
