--- a/views/index.tt
+++ b/views/index.tt
@@ -21,6 +21,17 @@
 				
               </p>
 			  
+
+			  <!------------------------------------------------------------------------------------------------>
+              
+			  <hr class="pci">
+	          <h1><font size="2" color="#afafaf">30.08.2020</font><br>3. Innerschwyzer Meisterschaft findet DOCH statt</h1>
+	              <p>
+					Dank dem Engagement von Walä Kaiser findet die 3. Innerschwyzer Meisterschaft nun doch statt.<br><br>
+Mehr Informationen in unserem <a href="/pdf/3.Innerschwyzer_Pfeifenraucher_Meisterschaft.pdf">Festführer</a>.
+	              </p>	
+				  		  
+
 			  
 			  <!------------------------------------------------------------------------------------------------>
               
