--- a/views/index.tt
+++ b/views/index.tt
@@ -20,6 +20,49 @@
 				Der Pfeifenclub Innerschwyz begrüsst Sie auf seiner Homepage und wünscht Ihnen viel Spass und "Guet Rauch"!
 				
               </p>
+              
+			  <!------------------------------------------------------------------------------------------------>                 
+			  <hr class="pci">
+	          <h1><font size="2" color="#afafaf">06.09.2020</font><br>Doppelsieg für den PC Innerschwyz</h1>
+	              <p>
+					Beim bisher schweizweit ersten Pfeifenrauch-Anlass im Jahr 2020 (die Gründe dafür sind allseits bekannt), konnte sich der Präsident des PCI, Edgar auf der Maur den ersten Platz errauchen, knapp vor dem Clubkameraden Richi Baggenstos. Den dritten Rang holte sich Thomas Flückiger vom PC Uster.
+	              </p>
+                  <p>
+                  <a href="/pdf/Rangliste_3._Innerschwyzer_Pfeifenraucher_Meisterschaft.pdf">Rangliste</a>
+                  </p>
+				  
+<div id="gallery20200905" class="20200905">
+	<a href="/images/20200905_3.innerschwyzer_meisterschaft/01.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/01.jpg" alt=""/></a>
+	<a href="/images/20200905_3.innerschwyzer_meisterschaft/02.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/02.jpg" alt=""/></a>
+    <a href="/images/20200905_3.innerschwyzer_meisterschaft/03.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/03.jpg" alt=""/></a>
+    
+    <a href="/images/20200905_3.innerschwyzer_meisterschaft/04.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/04.jpg" alt=""/></a>
+	<a href="/images/20200905_3.innerschwyzer_meisterschaft/05.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/05.jpg" alt=""/></a>
+    <a href="/images/20200905_3.innerschwyzer_meisterschaft/06.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/06.jpg" alt=""/></a>
+        
+    <a href="/images/20200905_3.innerschwyzer_meisterschaft/07.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/07.jpg" alt=""/></a>
+	<a href="/images/20200905_3.innerschwyzer_meisterschaft/08.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/08.jpg" alt=""/></a>
+    <a href="/images/20200905_3.innerschwyzer_meisterschaft/09.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/09.jpg" alt=""/></a>
+        
+    <a href="/images/20200905_3.innerschwyzer_meisterschaft/10.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/10.jpg" alt=""/></a>
+	<a href="/images/20200905_3.innerschwyzer_meisterschaft/11.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/11.jpg" alt=""/></a>
+    <a href="/images/20200905_3.innerschwyzer_meisterschaft/12.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/12.jpg" alt=""/></a>
+        
+    <a href="/images/20200905_3.innerschwyzer_meisterschaft/13.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/13.jpg" alt=""/></a>
+	<a href="/images/20200905_3.innerschwyzer_meisterschaft/14.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/14.jpg" alt=""/></a>
+    <a href="/images/20200905_3.innerschwyzer_meisterschaft/15.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/15.jpg" alt=""/></a>
+        
+    <a href="/images/20200905_3.innerschwyzer_meisterschaft/16.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/16.jpg" alt=""/></a>
+	<a href="/images/20200905_3.innerschwyzer_meisterschaft/17.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/17.jpg" alt=""/></a>
+    <a href="/images/20200905_3.innerschwyzer_meisterschaft/18.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/18.jpg" alt=""/></a>
+        
+    <a href="/images/20200905_3.innerschwyzer_meisterschaft/19.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/19.jpg" alt=""/></a>
+	<a href="/images/20200905_3.innerschwyzer_meisterschaft/20.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/20.jpg" alt=""/></a>
+    <a href="/images/20200905_3.innerschwyzer_meisterschaft/21.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/21.jpg" alt=""/></a>
+        
+    <a href="/images/20200905_3.innerschwyzer_meisterschaft/22.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/22.jpg" alt=""/></a>
+	<a href="/images/20200905_3.innerschwyzer_meisterschaft/23.jpg" data-lightbox="set20200905" data-title=""><img width="150" class="gallery20200905" src="/images/20200905_3.innerschwyzer_meisterschaft/23.jpg" alt=""/></a>
+</div>              
 			  
 
 			  <!------------------------------------------------------------------------------------------------>
