--- a/views/index.tt
+++ b/views/index.tt
@@ -21,6 +21,22 @@
 				
               </p>
               
+
+			  <!------------------------------------------------------------------------------------------------>                 
+			  <hr class="pci">
+	          <h1><font size="2" color="#afafaf">03.10.2020</font><br>Ausflug zum Hölloch</h1>
+	              <p>
+					Am Sonntag 27. September 2020 stand für einmal nicht das gemütliche Rauchen im Mittelpunkt. Der PCI besuchte das weltberühmte Hölloch im Muotathal. Marcel Rota, seines Zeichens Hölloch Zenterleiter und Höhlenführer, führte die Gruppe gekonnt durch die Windungen und unterhaltete mit amüsanten Anekdoten und fundiertem Fachwissen aus seiner über 30-jährigen Erfahrung im Hölloch. Anschliessend gab es noch ein feines Raclette.
+	              </p>
+				  
+<div id="gallery20200927" class="20200927">
+	<a href="/images/20200927_hoelloch/01.jpg" data-lightbox="set20200927" data-title=""><img width="150" class="gallery20200927" src="/images/20200927_hoelloch/01.jpg" alt=""/></a>
+	<a href="/images/20200927_hoelloch/02.jpg" data-lightbox="set20200927" data-title=""><img width="150" class="gallery20200927" src="/images/20200927_hoelloch/02.jpg" alt=""/></a>
+    <a href="/images/20200927_hoelloch/03.jpg" data-lightbox="set20200927" data-title=""><img width="150" class="gallery20200927" src="/images/20200927_hoelloch/03.jpg" alt=""/></a>
+    <a href="/images/20200927_hoelloch/04.jpg" data-lightbox="set20200927" data-title=""><img width="150" class="gallery20200927" src="/images/20200927_hoelloch/04.jpg" alt=""/></a>
+	<a href="/images/20200927_hoelloch/05.jpg" data-lightbox="set20200927" data-title=""><img width="150" class="gallery20200927" src="/images/20200927_hoelloch/05.jpg" alt=""/></a>
+</div>              
+		
 			  <!------------------------------------------------------------------------------------------------>                 
 			  <hr class="pci">
 	          <h1><font size="2" color="#afafaf">06.09.2020</font><br>Doppelsieg für den PC Innerschwyz</h1>
