--- a/views/sponsoren.tt
+++ b/views/sponsoren.tt
@@ -13,7 +13,7 @@
 			<p><div class="imagecaptioneasy imagecaptioneasy_nowrap" style="width:432px;"><img src="/images/grandmagazinlogo1.jpg" alt="Der Tabak und Souvenirs Kiosk direkt am See." /><br style="clear:both" /><span>Der Tabak und Souvenirs Kiosk direkt am See.</span></div></p>
 			
 			<h3>Buurehof Seeween (SZ)</h3>
-			<p><div class="imagecaptioneasy imagecaptioneasy_nowrap" style="width:432px;"><a href="http://bauernhof-seewen.ch/"><img src="/images/bauernhof_seewen.jpg" alt="Gasthaus zum Bauernhof, Seewernstrasse 36" /></a><br style="clear:both" /><span>Gasthaus zum Bauernhof, Seewernstrasse 36, 6423 Seewen</span></div></p>
+			<p><div class="imagecaptioneasy imagecaptioneasy_nowrap" style="width:432px;"><a href="http://bauernhofseewen.ch/"><img src="/images/bauernhof_seewen.jpg" alt="Gasthaus zum Bauernhof, Seewernstrasse 36" /></a><br style="clear:both" /><span>Gasthaus zum Bauernhof, Seewernstrasse 36, 6423 Seewen</span></div></p>
 			
 			
         </div>
